raw-manifests/order-product/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: default
spec:
  selector:
    app: orders
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3003
    targetPort: 3003
