raw-manifests/order-product/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: default
spec:
  selector:
    app: products
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3004
    targetPort: 3004
