raw-manifests/order-product/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: alb-ingress
  namespace: ecommerce
  annotations:
    ingress.kubernetes.io/class: nginx
    #ingress.kubernetes.io/scheme: internet-facing
    #ingress.kubernetes.io/target-type: ip
    #ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    #ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  #ingressClassName: nginx  # Set your desired class name
  rules:
  - host: example.com  # Replace with your desired hostname
  - http:
      paths:      
      - backend:
          service:
            name: orders-service
            port: 
              number: 3003
        path: /v1/orders
        pathType: Prefix
      - backend:
          service:
            name: products-service
            port: 
              number: 3004
        path: /v1/products
        pathType: Prefix
